--- a/serverless-api/Dockerfile
+++ b/serverless-api/Dockerfile
@@ -3,6 +3,6 @@ FROM public.ecr.aws/lambda/python:3.12
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-COPY main.py ./
+COPY app/ ./
 
 CMD ["main.handler"]
