--- a/serverless-api/.devcontainer/devcontainer.json
+++ b/serverless-api/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Serverless API Dev Container",
-    "image": "python:3.12",
+    "image": "nikolaik/python-nodejs:latest",
     "customizations": {
         "vscode": {
             "settings": {
@@ -12,9 +12,10 @@
                 "ms-python.black-formatter",
                 "foxundermoon.shell-format",
                 "manishsencha.readme-preview",
-                "GitHub.copilot"
+                "GitHub.copilot",
+                "svelte.svelte-vscode"
             ]
         }
     },
-    "postCreateCommand": "pip install -r requirements.txt"
+    "postCreateCommand": "pip install -r app/requirements.txt && npm install --prefix chat-app"
 }
