--- a/serverless-api/chat-app/package.json
+++ b/serverless-api/chat-app/package.json
@@ -28,6 +28,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@iconify/svelte": "^4.0.2",
 		"@sveltejs/adapter-static": "^3.0.6",
 		"ably": "^2.5.0"
 	}
