--- a/serverless-api/app/Dockerfile
+++ b/serverless-api/app/Dockerfile
@@ -1,8 +1,8 @@
 FROM public.ecr.aws/lambda/python:3.12
 
-COPY app/requirements.txt ./
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-COPY app/ ./
+COPY ./ ./
 
 CMD ["main.handler"]
